--- a/src/components/Thumbnail.astro
+++ b/src/components/Thumbnail.astro
@@ -13,15 +13,15 @@ interface Props {
 function getPublicUrl(
   image: ImageMetadata,
   collection?: string,
-  id?: string
+  id?: string,
 ): string {
   const filename = image.src
     .split('/')
     .pop()!
     .replace(/\.[a-z0-9|-]+(_[a-z0-9|-]+)*\./i, '.')
 
-  return collection && id
-    ? `/images/${collection}/${id}/${filename}`
+  return collection && id ?
+      `/images/${collection}/${id}/${filename}`
     : `/images/${filename}`
 }
 
@@ -59,9 +59,9 @@ const imgTitle = `${art.data.title} - ${art.data.description}`
 
 // handle animated images
 const formats =
-  art.data.type === 'animation'
-    ? ['webp'] // important: use webp for animations to not break the thumbnail
-    : ['avif', 'webp'] // use either for static images
+  art.data.type === 'animation' ?
+    ['webp'] // important: use webp for animations to not break the thumbnail
+  : ['avif', 'webp'] // use either for static images
 
 // calculate row and column position
 const row = Math.floor(index / 3) // 3 columns
@@ -89,8 +89,7 @@ const publicUrl = getPublicUrl(image as ImageMetadata, 'art', art.id)
 <figure
   class='group relative h-full w-full overflow-hidden'
   itemscope
-  itemtype='http://schema.org/ImageObject'
->
+  itemtype='http://schema.org/ImageObject'>
   <Picture
     src={image as ImageMetadata}
     alt={imgTitle}
