--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -7,6 +7,7 @@ import OpenGraph from '@/components/meta/OpenGraph.astro'
 import { getCanonicalUrl } from '@/lib/utils'
 import { ClientRouter } from 'astro:transitions'
 import { Head } from 'astro-capo'
+import '@/global.css'
 
 type Props = {
   title: string
